                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-09-2005 added: Startwindow examples to xboxmediacenter.xml
 - 07-09-2005 changed: increased progressbar timeout to 3 seconds on startup instead of 2
 - 07-09-2005 fixed: audio stutters when playback is started.
 - 06-09-2005 fixed: mplayer would leak about 300k on each run, du to UnrarXLib not cleaning up when failing
 - 06-09-2005 updated: mplayer.dll (reverted change for no seek after fastforward)
 - 06-09-2005 changed: iso9660 now prefers rockridge extension instead of joliet extension.
 - 05-09-2005 added: libdts to dvdplayer
 - 05-09-2005 changed: video scan enables stacking for best results. this should fix the issues with dvd folders being added to the database multiple times.
 - 05-09-2005 added: video scan button is hidden in context menu unless in files view
 - 05-09-2005 fixed [ 1281328 ] + [ 1281330 ] fixed navigation in imdb lookup thx to bubbadood
 - 05-09-2005 fixed: when dvdplayer was paused, its timer was not paused.
 - 05-09-2005 fixed: when deleting an item from my video title view, the top item would be the selected item
 - 05-09-2005 added: libmad decoder to dvdplayer
 - 04-09-2005 fixed: libcurl consumed 100% cpu when downloading data
 - 03-09-2005 fixed: clashes between mplayer and filerar progressbars.
 - 03-09-2005 added: sf.net patch [ 1257055 ] - instable behaivour in cddb.cpp - thanks to pade2!
 - 03-09-2005 fixed: filerar would fail to open first file in an archive if the archive had a comment.
 - 02-09-2005 fixed: filerar would fail if seek was called immediately after construction (broke e.g. mp3s with id3v2-tags).
 - 02-09-2005 added: httpapi exposed more values to GetGuiStatus