@@ -155,4 +155,7 @@ void export_kernel32()
   g_dlls.kernel32.AddExport("GetConsoleOutputCP", (unsigned long)dllGetConsoleOutputCP);
   g_dlls.kernel32.AddExport("SetConsoleCtrlHandler", (unsigned long)dllSetConsoleCtrlHandler);
   g_dlls.kernel32.AddExport("GetExitCodeThread", (unsigned long)GetExitCodeThread);
+  g_dlls.kernel32.AddExport("VirtualQuery", (unsigned long)VirtualQuery);
+  g_dlls.kernel32.AddExport("VirtualProtect", (unsigned long)VirtualProtect);
+  g_dlls.kernel32.AddExport("UnhandledExceptionFilter", (unsigned long)UnhandledExceptionFilter);
 }
